Link to About page

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -128,13 +128,13 @@
 <body>
     <header>
         <img src="/img/logo.png" alt="City Vote Logo" class="logo">
-        <div class="subtitle">Connecting Cities Through Democratic Innovation</div>
+        <div class="subtitle">Global coordination between municipalities</div>
     </header>
 
     <div class="container">
         <section>
             <h2>About Us</h2>
-            <p>Our company Rix Data, based in Amsterdam Netherlands, focuses on enabling more efficient coordination among governments internationally.</p>
+            <p>Our company Rix Data, based in Amsterdam Netherlands, focuses on enabling more efficient coordination among individuals and governments internationally.</p>
             <p>We are developing three complementary platforms:</p>
             <ul class="phase-list">
                 <li><a href="https://ip-vote.com" target="_blank" class="external-link">ip-vote.com</a> allows individuals to express their opinion online using their IP Address or Phone number as authentication while keeping a high level of privacy.</li>
@@ -151,7 +151,7 @@
         <section class="auth-section">
             <h2>Authentication Process</h2>
             <div class="info-box">
-                <p>City-vote.com is a proof of concept project. While our current authentication approach is simplified for demonstration purposes, we recognize its limitations for real-world implementation.</p>
+                <p>City-vote.com is currently in a proof of concept phase. While our current authentication approach is simplified for demonstration purposes, we recognize its limitations for real-world implementation.</p>
             </div>
             <p>Instead of relying on centralized identity verification through single entities like LinkedIn or Rix Data, we envision a transition towards independently verifiable authentication and decentralized city-to-city verification systems.</p>
             <p>We've adopted a two-phase approach:</p>
