Update about page

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -153,7 +153,7 @@
             <div class="info-box">
                 <p>City-vote.com is currently in a proof of concept phase. While our current authentication approach is simplified for demonstration purposes, we recognize its limitations for real-world implementation.</p>
             </div>
-            <p>Instead of relying on centralized identity verification through single entities like LinkedIn or Rix Data, we envision a transition towards independently verifiable authentication and decentralized city-to-city verification systems.</p>
+            <p>Instead of relying on centralized identity verification through single entities like LinkedIn or Twitter, we envision a transition towards independently verifiable authentication and decentralized city-to-city verification systems.</p>
             <p>We've adopted a two-phase approach:</p>
             <ol class="phase-list">
                 <li>Phase 1: A simplified authentication system that allows cities to quickly explore the platform's possibilities with minimal effort</li>
