--- a/frontend/about.html
+++ b/frontend/about.html
@@ -127,7 +127,7 @@
 </head>
 <body>
     <header>
-        <img src="/img/logo.png" alt="City Vote Logo" class="logo">
+        <img src="public/img/logo.png" alt="City Vote Logo" class="logo">
         <div class="subtitle">Global coordination between municipalities</div>
     </header>
 
@@ -146,6 +146,20 @@
         <section>
             <h2>Our Mission</h2>
             <p>Our mission is to strengthen democracies and international law enforcement through efficient coordination among governments.</p>
+            
+            <div style="display: flex; align-items: center; margin-top: 1.5rem; margin-bottom: 0.5rem;">
+                <img src="public/img/founder_C.png" alt="Chris Rieckmann" class="founder-image" style="width: 80px; height: 80px; border-radius: 40px; margin-right: 1.5rem; object-fit: cover;">
+                <div>
+                    <h3 style="margin-bottom: 0.3rem; color: #333; font-size: 1.2rem;">Chris Rieckmann</h3>
+                    <p style="margin-bottom: 0.5rem; font-size: 0.9rem;">Founder & CEO</p>
+                    <a href="https://www.linkedin.com/in/c-rieckmann/" target="_blank" class="external-link" style="display: flex; align-items: center; font-size: 0.9rem;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="#0077B5" style="margin-right: 0.5rem;">
+                            <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                        </svg>
+                        LinkedIn Profile
+                    </a>
+                </div>
+            </div>
         </section>
 
         <section class="auth-section">
@@ -167,4 +181,4 @@
         <p>© 2024 Rix Data NL B.V. · Herengracht 551, 1017 BW Amsterdam · KVK 88818306</p>
     </footer>
 </body>
-</html> 
+</html>
