--- a/frontend/about.html
+++ b/frontend/about.html
@@ -165,7 +165,7 @@
         <section class="auth-section">
             <h2>Authentication Process</h2>
             <div class="info-box">
-                <p>City-vote.com is currently in a proof of concept phase. While our current authentication approach is simplified for demonstration purposes, we recognize its limitations for real-world implementation.</p>
+                <p>While our current authentication approach is simplified, we recognize its limitations for real-world implementation and are continuously improving it.</p>
             </div>
             <p>Instead of relying on centralized identity verification through single entities like LinkedIn or Twitter, we envision a transition towards independently verifiable authentication and decentralized city-to-city verification systems.</p>
             <p>We've adopted a two-phase approach:</p>
