Add links to root

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -127,7 +127,9 @@
 </head>
 <body>
     <header>
-        <img src="public/img/logo.png" alt="City Vote Logo" class="logo">
+        <a href="/">
+            <img src="public/img/logo.png" alt="City Vote Logo" class="logo" style="cursor: pointer;">
+        </a>
         <div class="subtitle">Global coordination between municipalities</div>
     </header>
 
